--- a/templates/index.html
+++ b/templates/index.html
@@ -100,7 +100,8 @@
                     <div class="col-lg-12">
                         <div class="aligncenter">
                             <h1 class="aligncenter">YOUR <strong>JOURNEY</strong> IS OUR PRIORITY</h1><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>
-                            <p style="text-align: justify;">T for Travel is an online Destination search platform that collates and suggests various Holiday destinations based upon your weather interests, budget options and the duration of your trip. Hence this site will come in handy for the users planning their next holiday trip to the most suitable destination according to their needs and requirements.</p>
+                            <p style="text-align: justify;">T for Travel is an online Destination search platform that collates and suggests various Holiday destinations based upon your weather interests, budget options and the duration of your trip. Hence this site will come in handy
+                                for the users planning their next holiday trip to the most suitable destination according to their needs and requirements.</p>
                         </div>
                     </div>
                 </div>
@@ -150,7 +151,15 @@
                         <input type="text" name="city" placeholder="Enter State Name" class="city">
                     </div>
                     <div class="search1">
-                        <input type="text" name="temp" placeholder="Enter Temperature" class="city">
+                        <select name="temp" class="city">
+                            <option value="">Select Temperature Preference</option>
+                            <option value="Mild">Mild</option>
+                            <option value="Cold">Cold</option>
+                            <option value="Hot">Hot</option>
+                            <option value="Humid">Humid</option>
+                            <option value="Snow">Snow</option>
+                            <option value="Rain">Rain</option>
+                        </select>
                     </div>
                     <div class="search1">
                         <input type="text" name="budget" placeholder="budget" class="city">
@@ -158,6 +167,7 @@
                     <div class="search1">
                         <button class="btn-group-lg but1">Search</button>
                     </div>
+
                 </form>
             </div>
         </section>
@@ -176,25 +186,25 @@
                         <div class="textbox">
                             <img src="../static/img/uttar pradesh/Hawa-Mahal.jpg" alt="" style="width: 300px; height: 250px; margin-top: 20px;">
                             <h3 style="text-decoration: underline;">Jaipur - Beyond the Pink of the City | untravel Blog</h3>
-                            <p style="text-align: justify;">India’s official ‘pink city’, there’s much more to Rajasthan’s capital than its pink-red-tinged buildings and historic splendour. This majestic home to erstwhile royals is complete with old-world charm surrounded by colorful markets and chaotic streets. A part of the ‘Golden Triangle, Jaipur is a must-visit destination along with Agra and New Delhi...<a href="https://blog.untravel.com/jaipur/" target="_blank" rel="noopener noreferrer">Read More</a></p>
+                            <p style="text-align: justify;">India’s official ‘pink city’, there’s much more to Rajasthan’s capital than its pink-red-tinged buildings and historic splendour. This majestic home to erstwhile royals is complete with old-world charm surrounded by colorful
+                                markets and chaotic streets. A part of the ‘Golden Triangle, Jaipur is a must-visit destination along with Agra and New Delhi...<a href="https://blog.untravel.com/jaipur/" target="_blank" rel="noopener noreferrer">Read More</a></p>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="textbox">
                             <img src="../static/img/uttar pradesh/Dehradun.png" alt="" style="width: 300px; height: 250px; margin-top: 20px;">
                             <h3 style="text-decoration: underline;">Attractions in Dehradun , Uttarakhand | Aloktomar's Blog</h3>
-                            <p style="text-align: justify;">Dehradun is one of the most visited tourist attractions in Uttarakhand, mostly as a brief stopover en route Mussoorie. Located on the foothills of the Himalayan mountain range Dehradun is a striking yet serene place. It is thought to be one of the oldest (read as ancient) cities in India.Indications of Dehradun ...<a href="https://aloktomar.wordpress.com/attractions-in-dehradun/" target="_blank" rel="noopener noreferrer">Read More</a></p>
+                            <p style="text-align: justify;">Dehradun is one of the most visited tourist attractions in Uttarakhand, mostly as a brief stopover en route Mussoorie. Located on the foothills of the Himalayan mountain range Dehradun is a striking yet serene place. It is
+                                thought to be one of the oldest (read as ancient) cities in India.Indications of Dehradun ...<a href="https://aloktomar.wordpress.com/attractions-in-dehradun/" target="_blank" rel="noopener noreferrer">Read More</a></p>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="textbox">
                             <img src="../static/img/uttar pradesh/kolkata.jpg" alt="" style="width: 300px; height: 250px; margin-top: 20px;">
                             <h3 style="text-decoration: underline;">To Kolkata with Love: A Photo Blog Depicting Kolkata Culture</h3>
-                            <p style="text-align: justify;">About this Blog: I am a Kolkata girl. If you scratch my hands a little, you will see Kolkata in blood.
-
-                                I do not live in Kolkata anymore. It is painfully overwhelming to even try to write about home. So, I decided to let the pictures talk on my behalf.
-                                
-                                These pictures are clicked over a couple of years as I was visiting the erstwhile capital of British India...<a href="https://www.orangewayfarer.com/kolkata-culture-love-photoblog/" target="_blank" rel="noopener noreferrer">Read More</a></p>
+                            <p style="text-align: justify;">About this Blog: I am a Kolkata girl. If you scratch my hands a little, you will see Kolkata in blood. I do not live in Kolkata anymore. It is painfully overwhelming to even try to write about home. So, I decided to let the
+                                pictures talk on my behalf. These pictures are clicked over a couple of years as I was visiting the erstwhile capital of British India...<a href="https://www.orangewayfarer.com/kolkata-culture-love-photoblog/" target="_blank"
+                                    rel="noopener noreferrer">Read More</a></p>
                         </div>
                     </div>
                 </div>
