--- a/templates/destination.html
+++ b/templates/destination.html
@@ -111,12 +111,9 @@
                     </div>
                     <div class="col-lg-4 ">
                         <div class="widget ">
-                            <h5 class="widgetheading ">Helpful Links</h5>
-                            <ul class="link-list ">
-                                <li><a href="https://www.euttaranchal.com/tourism/dehradun.php">Dehradun Travel Guide</a></li>
-                                <li><a href="https://mybiz.makemytrip.com/v2/">Travel Agent Companies - Simplifying Business Travel</a></li>
-                                <li><a href="https://www.cozi.com/blog/vacation-packing-checklist/">Vacation Packing Checklist</a></li>
-                            </ul>
+                            <h5 class="widgetheading ">Location</h5>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3535.6077311938607!2d77.59113581458939!3d27.605688682834053!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39736ce47bffc039%3A0xfe5fc3da92c6341!2sGLA%20University!5e0!3m2!1sen!2sin!4v1638731678952!5m2!1sen!2sin"
+                                width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                         </div>
                     </div>
                 </div>
