--- a/templates/index.html
+++ b/templates/index.html
@@ -148,7 +148,10 @@
                 <h2 style="margin: 10px 300px;">Search Your Destination</h2>
                 <form action="{{ url_for('search') }}" method="get" class="form-area">
                     <div class="search1">
-                        <input type="text" name="city" placeholder="Enter State Name" class="city">
+                        <select name="city" class="city">
+                            <option value="">Select State </option>
+                            <option value="Uttar Pradesh">Uttar Pradesh</option>
+                        </select>
                     </div>
                     <div class="search1">
                         <select name="temp" class="city">
@@ -162,7 +165,10 @@
                         </select>
                     </div>
                     <div class="search1">
-                        <input type="text" name="budget" placeholder="budget" class="city">
+                        <select name="budget" class="city">
+                            <option value="">Select Budget </option>
+                            <option value="5000">5000</option>
+                        </select>
                     </div>
                     <div class="search1">
                         <button class="btn-group-lg but1">Search</button>
