--- a/templates/login.html
+++ b/templates/login.html
@@ -82,8 +82,10 @@
                     <form action="{{ url_for('register') }}" method="POST" id="register" class="input-group">
                         <input type="text" name="username" class="input-field" placeholder="User Id" required />
                         <input type="email" name="email" class="input-field" placeholder="Enter Email" required />
-                        <input type="password" name="password" class="input-field" placeholder="Enter Password" required />
+                        <input type="password" name="password" class="input-field" placeholder="Enter Password" id="password" required />
+                        <input type="password" name="repassword" class="input-field" placeholder="Re-Enter Password" id="repassword" required />
                         <input type="checkbox" class="check-box" /><span>I agree to the terms & conditions</span>
+                        <span id='message'></span>
                         <button type="submit" class="submit-btn">Register</button>
                     </form>
                 </div>
@@ -162,6 +164,21 @@
             y.style.left = "450px";
             z.style.left = "0";
         }
+    </script>
+    <script>
+        var password = document.getElementById("password"),
+            repassword = document.getElementById("repassword");
+
+        function validatePassword() {
+            if (password.value != repassword.value) {
+                repassword.setCustomValidity("Passwords Don't Match");
+            } else {
+                repassword.setCustomValidity('');
+            }
+        }
+
+        password.onchange = validatePassword;
+        repassword.onkeyup = validatePassword;
     </script>
     <a href="#" class="scrollup"><i class="fa fa-angle-up active"></i></a>
     <!-- javascript
